added a menu and a activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#1111"
     android:id="@+id/layout"
     tools:context=".MainActivity">
+
+
 
     <com.toptoche.searchablespinnerlibrary.SearchableSpinner
         android:id="@+id/counrty1Spinner"
