--- a/app/src/main/res/layout/activity_compare.xml
+++ b/app/src/main/res/layout/activity_compare.xml
@@ -13,40 +13,36 @@
         android:id="@+id/compareCurrenciesSpinner"
         android:layout_width="175dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="160dp"
         android:maxWidth="175dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.144"
+        app:layout_constraintEnd_toStartOf="@+id/compareCurrenciesEditText"
+        app:layout_constraintHorizontal_bias="0.535"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.216" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/compareCurrenciesEditText"
         android:layout_width="154dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="152dp"
+        android:layout_marginEnd="24dp"
         android:ems="10"
         android:inputType="numberDecimal"
         android:textColor="#000000"
         android:textCursorDrawable="@color/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.703"
-        app:layout_constraintStart_toEndOf="@+id/compareCurrenciesSpinner"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.202" />
+        app:layout_constraintHorizontal_bias="0.991"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/compareCurrenciesListView"
-        android:layout_width="421dp"
-        android:layout_height="527dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="450dp"
+        android:layout_marginTop="244dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/compareCurrenciesSpinner"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
